[project]
name = "ai-services-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
